Window size fixed
Solve the problem when windows is too small all the components will stack together.

--- a/goh-app/src/App.css
+++ b/goh-app/src/App.css
@@ -1,5 +1,6 @@
 body {
   background: white;
+  min-width: 1500px;
 }
 
 .App {
